--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,5 +1,4 @@
 <ion-tabs>
-
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="fast-food-outline"></ion-icon>
@@ -12,9 +11,15 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
+      <ion-icon name="chatbox-outline"></ion-icon>
+      <ion-label>Chat</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab4">
       <ion-icon name="menu-outline"></ion-icon>
       <ion-label>Menu</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
+
+<h1>1aaaaa</h1>
