--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,54 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+    <ion-title>Chat</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Menu</ion-title>
+      <ion-title size="large">Chat</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-item>
+    <ion-avatar slot="start">
+      <img
+        alt="Silhouette of a person's head"
+        src="assets/images/garcom.jpeg"
+      />
+    </ion-avatar>
+    <ion-label> Atendente </ion-label>
+  </ion-item>
 </ion-content>
+
+<ion-content class="ion-padding">
+  <ion-list>
+    <div *ngFor="let msg of messages; let i = index" [class.sent]="i % 2 === 0">
+      <div class="message-bubble">{{ msg }}</div>
+    </div>
+  </ion-list>
+</ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="9">
+          <ion-item>
+            <ion-icon class="emoji-icon" name="happy-outline"></ion-icon>
+            <ion-input
+              placeholder="Digite sua mensagem"
+              mode="ios"
+              [(ngModel)]="message"
+            ></ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col size="3">
+          <ion-button (click)="sendMessage()"
+            ><ion-icon name="navigate-outline"></ion-icon
+          ></ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
+</ion-footer>
