--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -60,7 +60,10 @@
       <ion-list>
         <ion-item>
           <ion-thumbnail slot="start">
-            <img alt="Silhouette of mountains" src="assets/images/x-tudo.jpg" />
+            <img
+              alt="Lanche x-tudo com batatas fritas ao lado"
+              src="assets/images/x-tudo.jpg"
+            />
           </ion-thumbnail>
           <ion-label>X-Tudo Super</ion-label>
         </ion-item>
@@ -68,7 +71,7 @@
         <ion-item>
           <ion-thumbnail slot="start">
             <img
-              alt="Silhouette of mountains"
+              alt="Lanche x-bacon com queijo derretido em cima da carne"
               src="assets/images/x-bacon.jpg"
             />
           </ion-thumbnail>
@@ -78,7 +81,7 @@
         <ion-item>
           <ion-thumbnail slot="start">
             <img
-              alt="Silhouette of mountains"
+              alt="Lanche x-burguer com tomate e batata frita ao lado"
               src="assets/images/x-burguer.jpg"
             />
           </ion-thumbnail>
@@ -88,7 +91,7 @@
         <ion-item lines="none">
           <ion-thumbnail slot="start">
             <img
-              alt="Silhouette of mountains"
+              alt="Lanche x-salada com tomate, queijo e carne"
               src="assets/images/x-salada.jpg"
             />
           </ion-thumbnail>
@@ -107,7 +110,7 @@
         <ion-item>
           <ion-thumbnail slot="start">
             <img
-              alt="Silhouette of mountains"
+              alt="Prato com parmegiana, arroz e batatas fritas"
               src="assets/images/parmegiana.jpeg"
             />
           </ion-thumbnail>
@@ -117,7 +120,7 @@
         <ion-item>
           <ion-thumbnail slot="start">
             <img
-              alt="Silhouette of mountains"
+              alt="Prato com picanha, salada e arroz"
               src="assets/images/picanha.jpeg"
             />
           </ion-thumbnail>
@@ -127,7 +130,7 @@
         <ion-item>
           <ion-thumbnail slot="start">
             <img
-              alt="Silhouette of mountains"
+              alt="Prato com purê de batata, arroz, feijão e filé de frango"
               src="assets/images/frango.jpeg"
             />
           </ion-thumbnail>
@@ -137,7 +140,7 @@
         <ion-item lines="none">
           <ion-thumbnail slot="start">
             <img
-              alt="Silhouette of mountains"
+              alt="Prato com arroz, costela de porco e molho barbecue"
               src="assets/images/costela.jpeg"
             />
           </ion-thumbnail>
@@ -156,7 +159,7 @@
         <ion-item>
           <ion-thumbnail slot="start">
             <img
-              alt="Silhouette of mountains"
+              alt="Garrafa de refrigerante de limão sprite"
               src="assets/images/sprite.jpeg"
             />
           </ion-thumbnail>
@@ -165,21 +168,27 @@
 
         <ion-item>
           <ion-thumbnail slot="start">
-            <img alt="Silhouette of mountains" src="assets/images/coca.jpeg" />
+            <img
+              alt="Garrafa de refrigerante de cola, coca-cola."
+              src="assets/images/coca.jpeg"
+            />
           </ion-thumbnail>
           <ion-label>Coca-Cola</ion-label>
         </ion-item>
 
         <ion-item>
           <ion-thumbnail slot="start">
-            <img alt="Silhouette of mountains" src="assets/images/suco.jpeg" />
+            <img
+              alt="Copo de suco de laranja com uma laranja no copo"
+              src="assets/images/suco.jpeg"
+            />
           </ion-thumbnail>
           <ion-label>Suco</ion-label>
         </ion-item>
 
         <ion-item lines="none">
           <ion-thumbnail slot="start">
-            <img alt="Silhouette of mountains" src="assets/images/agua.jpeg" />
+            <img alt="Garrafa de água" src="assets/images/agua.jpeg" />
           </ion-thumbnail>
           <ion-label>Água</ion-label>
         </ion-item>
@@ -195,7 +204,10 @@
       <ion-list>
         <ion-item>
           <ion-thumbnail slot="start">
-            <img alt="Silhouette of mountains" src="assets/images/petit.jpeg" />
+            <img
+              alt="Bolinho petit gateau com uma bola de sorvete de chocolate em cima"
+              src="assets/images/petit.jpeg"
+            />
           </ion-thumbnail>
           <ion-label>Petit Gateau</ion-label>
         </ion-item>
@@ -203,7 +215,7 @@
         <ion-item>
           <ion-thumbnail slot="start">
             <img
-              alt="Silhouette of mountains"
+              alt="Taça com bola de sorvete de chocolate"
               src="assets/images/sorvete.jpeg"
             />
           </ion-thumbnail>
@@ -213,7 +225,7 @@
         <ion-item>
           <ion-thumbnail slot="start">
             <img
-              alt="Silhouette of mountains"
+              alt="Prato com bananas e bolas de sorvete por cima"
               src="assets/images/banana.jpeg"
             />
           </ion-thumbnail>
@@ -223,7 +235,7 @@
         <ion-item lines="none">
           <ion-thumbnail slot="start">
             <img
-              alt="Silhouette of mountains"
+              alt="Brigadeiros com coberturas de cores diversas, chocolate, morango, maracujá e danone"
               src="assets/images/brigadeiro.jpeg"
             />
           </ion-thumbnail>
