--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -45,7 +45,7 @@
         </ion-col>
         <ion-col size="3">
           <ion-button (click)="sendMessage()"
-            ><ion-icon name="navigate-outline"></ion-icon
+            ><ion-icon name="paper-plane-outline"></ion-icon
           ></ion-button>
         </ion-col>
       </ion-row>
