--- a/src/app/order/order.page.html
+++ b/src/app/order/order.page.html
@@ -1,4 +1,5 @@
 <ion-header mode="md">
+  <ion-icon routerLink="/tabs/tab1" name="arrow-back-outline"></ion-icon>
   <ion-toolbar>
     <img src="assets/images/bgorder.jpeg" alt="" />
   </ion-toolbar>
@@ -35,6 +36,9 @@
           </ion-item>
           <ion-item>
             <ion-checkbox checked="true">Queijo</ion-checkbox>
+          </ion-item>
+          <ion-item>
+            <ion-checkbox checked="true">Calabresa</ion-checkbox>
           </ion-item>
         </ion-list>
       </ion-card-content>
