--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -32,13 +32,7 @@
         <ion-label>All</ion-label>
       </ion-segment-button>
       <ion-segment-button value="comidas">
-        <ion-label>Comidas</ion-label>
-      </ion-segment-button>
-      <ion-segment-button value="bebidas">
-        <ion-label>Bebidas</ion-label>
-      </ion-segment-button>
-      <ion-segment-button value="sobremesas">
-        <ion-label>Sobremesas</ion-label>
+        <ion-label>Favorites</ion-label>
       </ion-segment-button>
     </ion-segment>
   </ion-toolbar>
@@ -58,7 +52,7 @@
     </ion-card-header>
     <ion-card-content>
       <ion-list>
-        <ion-item>
+        <ion-item routerLink="/order">
           <ion-thumbnail slot="start">
             <img
               alt="Lanche x-tudo com batatas fritas ao lado"
@@ -68,7 +62,7 @@
           <ion-label>X-Tudo Super</ion-label>
         </ion-item>
 
-        <ion-item>
+        <ion-item routerLink="/order">
           <ion-thumbnail slot="start">
             <img
               alt="Lanche x-bacon com queijo derretido em cima da carne"
@@ -76,16 +70,6 @@
             />
           </ion-thumbnail>
           <ion-label>X-Bacon</ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-thumbnail slot="start">
-            <img
-              alt="Lanche x-burguer com tomate e batata frita ao lado"
-              src="assets/images/x-burguer.jpg"
-            />
-          </ion-thumbnail>
-          <ion-label>X-Burguer</ion-label>
         </ion-item>
 
         <ion-item lines="none">
@@ -96,6 +80,16 @@
             />
           </ion-thumbnail>
           <ion-label>X-Salada</ion-label>
+        </ion-item>
+
+        <ion-item>
+          <ion-thumbnail slot="start">
+            <img
+              alt="Lanche x-burguer com tomate e batata frita ao lado"
+              src="assets/images/x-burguer.jpg"
+            />
+          </ion-thumbnail>
+          <ion-label>X-Burguer</ion-label>
         </ion-item>
       </ion-list>
     </ion-card-content>
