--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -239,3 +239,7 @@
     </ion-card-content>
   </ion-card>
 </ion-content>
+
+<ion-fab vertical="bottom" horizontal="end" routerLink="/cart">
+  <ion-fab-button><ion-icon name="cart-outline"></ion-icon></ion-fab-button>
+</ion-fab>
