--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -35,7 +35,11 @@
       <ion-row>
         <ion-col size="9">
           <ion-item>
-            <ion-icon class="emoji-icon" name="happy-outline"></ion-icon>
+            <ion-icon
+              class="emoji-icon"
+              name="happy-outline"
+              (click)="abrirTecladoEmoji()"
+            ></ion-icon>
             <ion-input
               placeholder="Digite sua mensagem"
               mode="ios"
