--- a/src/app/order/order.page.html
+++ b/src/app/order/order.page.html
@@ -1,19 +1,23 @@
-<ion-header mode="md">
-  <ion-icon routerLink="/tabs/tab1" name="arrow-back-outline"></ion-icon>
-  <ion-toolbar>
-    <img src="assets/images/bgorder.jpeg" alt="" />
-  </ion-toolbar>
-</ion-header>
-<ion-header>
-  <h1>Pedidos</h1>
-</ion-header>
-
 <ion-content>
+  <div class="header">
+    <ion-toolbar mode="md">
+      <ion-buttons slot="start">
+        <ion-back-button
+          defaultHref="/tabs/tab1"
+          icon="chevron-back"
+          color="light"
+        ></ion-back-button>
+      </ion-buttons>
+
+      <ion-title color="light">Pedido</ion-title>
+    </ion-toolbar>
+  </div>
+
   <ion-item>
     <ion-card>
-      <img alt="Silhouette of mountains" src="assets/images/x-tudo.jpg" />
+      <img *ngIf="item.img" [src]="item.img" />
       <ion-card-header>
-        <ion-card-title>X-Tudo Super</ion-card-title>
+        <ion-card-title> {{item.title}} </ion-card-title>
         <ion-card-subtitle>Lanches</ion-card-subtitle>
       </ion-card-header>
 
@@ -49,23 +53,29 @@
     <ion-grid>
       <ion-row>
         <ion-col size="2">
-          <ion-item>
-            <ion-icon name="remove-circle-outline"></ion-icon>
+          <ion-item class="ion-text-center">
+            <ion-icon
+              (click)="minusAmount()"
+              name="remove-circle-outline"
+            ></ion-icon>
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <ion-item class="ion-text-center">
+            <ion-label>{{ amount }} </ion-label>
           </ion-item>
         </ion-col>
         <ion-col size="2">
-          <ion-item>
-            <ion-label>1</ion-label>
+          <ion-item class="ion-text-center" lines="none">
+            <ion-icon
+              (click)="plusAmount()"
+              name="add-circle-outline"
+            ></ion-icon>
           </ion-item>
         </ion-col>
-        <ion-col size="2">
+        <ion-col size="5">
           <ion-item>
-            <ion-icon name="add-circle-outline"></ion-icon>
-          </ion-item>
-        </ion-col>
-        <ion-col size="6">
-          <ion-item>
-            <ion-button
+            <ion-button routerLink="/tabs/tab1"
               >Adicionar <ion-icon name="cart-outline"></ion-icon>
             </ion-button>
           </ion-item>
