--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -52,44 +52,16 @@
     </ion-card-header>
     <ion-card-content>
       <ion-list>
-        <ion-item routerLink="/order">
+        <ion-item
+          [routerLink]="'/order/' + item.id"
+          *ngFor="let item of items; index as i"
+          [lines]="i === items.length - 1 ? 'none' : 'normal'"
+          detail="false"
+        >
           <ion-thumbnail slot="start">
-            <img
-              alt="Lanche x-tudo com batatas fritas ao lado"
-              src="assets/images/x-tudo.jpg"
-            />
+            <img *ngIf="item.img" [src]="item.img" />
           </ion-thumbnail>
-          <ion-label>X-Tudo Super</ion-label>
-        </ion-item>
-
-        <ion-item routerLink="/order">
-          <ion-thumbnail slot="start">
-            <img
-              alt="Lanche x-bacon com queijo derretido em cima da carne"
-              src="assets/images/x-bacon.jpg"
-            />
-          </ion-thumbnail>
-          <ion-label>X-Bacon</ion-label>
-        </ion-item>
-
-        <ion-item lines="none">
-          <ion-thumbnail slot="start">
-            <img
-              alt="Lanche x-salada com tomate, queijo e carne"
-              src="assets/images/x-salada.jpg"
-            />
-          </ion-thumbnail>
-          <ion-label>X-Salada</ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-thumbnail slot="start">
-            <img
-              alt="Lanche x-burguer com tomate e batata frita ao lado"
-              src="assets/images/x-burguer.jpg"
-            />
-          </ion-thumbnail>
-          <ion-label>X-Burguer</ion-label>
+          <ion-label>{{ item.title }}</ion-label>
         </ion-item>
       </ion-list>
     </ion-card-content>
