--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -128,5 +128,6 @@
 </ion-content>
 
 <ion-fab vertical="bottom" horizontal="end" routerLink="/cart">
-  <ion-fab-button><ion-icon name="cart-outline"></ion-icon></ion-fab-button>
+  <ion-fab-button><ion-icon name="cart-outline"></ion-icon></ion-fab-button
+  ><ion-badge>2</ion-badge>
 </ion-fab>
