--- a/src/app/order/order.page.html
+++ b/src/app/order/order.page.html
@@ -59,7 +59,7 @@
         </ion-col>
         <ion-col size="5">
           <ion-item>
-            <ion-button routerLink="/tabs/tab1"
+            <ion-button (click)="addOrders(item)" routerLink="/tabs/tab1"
               >Adicionar <ion-icon name="cart-outline"></ion-icon>
             </ion-button>
           </ion-item>
