--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,6 +1,14 @@
 ion-fab-button {
-    width: 56px;
-    height: 56px;
-    border-radius: 100%;
-    margin-right: 5px;
+  position: relative;
+  width: 56px;
+  height: 56px;
+  border-radius: 100%;
+  margin-right: 5px;
+}
+
+ion-badge {
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  border-radius: 100%;
 }
